Programming Languages/Hw2/part4/t10.output
running e2c
compiling the C generated code
t10.c: In function ‘main’:
t10.c:4:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t10.c:7:10: error: expected expression before ‘<=’ token
 else if( <= 0){
          ^
